--- a/index.html
+++ b/index.html
@@ -1,72 +1,347 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfólio</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfólio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <header>
-    <nav>
+  <body>
+    <header>
       <h1>JV</h1>
-
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Sobre</a></li>
-        <li><a href="">Projetos</a></li>
-        <li><a href="">Contato</a></li>
-      </ul>
-
-      <button><a href="https://wa.me/5540028922">Entre em contato</a></button>
-    </nav>
-  </header>
-
-  <main>
-    <div id="about-me">
-      <div class="profile">
-        <img src="assets/perfil-pic.png" alt="">
+      <nav>
+        <i class="fas fa-bars hamburger" aria-label="Toggle navigation"></i>
         <ul>
-          <li><i class="fa-brands fa-github"></i></li>
-          <li><i class="fa-brands fa-linkedin"></i></li>
-          <li><i class="fa-brands fa-instagram"></i></li>
+          <li><a href="">Home</a></li>
+          <li><a href="#about-me">Sobre</a></li>
+          <li><a href="#exp-list">Experiências</a></li>
+          <li><a href="#projects">Projetos</a></li>
+          <li><a href="#contact">Contato</a></li>
         </ul>
-      </div>
+      </nav>
+      <button><a href="https://wa.me/5540028922">Entre em contato</a></button>
+    </header>
 
-      <div class="description">
-        <div class="sobre">
-          <h1>Sobre mim</h1>
-          <p>Meu nome é João Victor. Tenho 19 anos e atualmente sou desenvolvedor frontend e instrutor de programação e
-            robótica, sou apaixonado por tecnologia e futebol.</p>
-        </div>
-        <div class="skills">
-          <h1>Habilidades</h1>
+    <main>
+      <section id="about-me">
+        <div class="profile">
+          <img src="assets/perfil-pic.png" alt="" />
           <ul>
-            <li><i class="fa-brands fa-python"></i></li>
-            <li><i class="fa-brands fa-html5"></i></li>
-            <li><i class="fa-brands fa-css3-alt"></i></li>
-            <li><i class="fa-brands fa-js"></i></li>
-            <li><i class="fa-brands fa-react"></i></li>
-            <li><img src="assets/tailwind-logo.svg" alt=""></li>
+            <li>
+              <a href="https://github.com/jvfsccp" target="_blank"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/joao-victor-fernandes-castro/"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/_jaoovf/" target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </li>
           </ul>
         </div>
-      </div>
-    </div>
-  </main>
-</body>
 
+        <div class="description">
+          <div class="sobre">
+            <h1>Sobre mim</h1>
+            <p>
+              Meu nome é João Victor. Tenho 19 anos e atualmente sou
+              desenvolvedor frontend e instrutor de programação e robótica, sou
+              apaixonado por tecnologia e futebol.
+            </p>
+          </div>
+          <div class="skills">
+            <h1>Habilidades</h1>
+            <ul>
+              <li><i class="fa-brands fa-python"></i></li>
+              <li><i class="fa-brands fa-html5"></i></li>
+              <li><i class="fa-brands fa-css3-alt"></i></li>
+              <li><i class="fa-brands fa-js"></i></li>
+              <li><i class="fa-brands fa-react"></i></li>
+              <li><img src="assets/tailwind-logo.svg" alt="" /></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="exp-list">
+        <i class="fa-solid fa-briefcase"></i>
+        <h1>Experiência Profissional</h1>
+
+        <div id="exp-container">
+          <div class="exp">
+            <i class="fa-solid fa-briefcase"></i>
+            <h2>Estagiário T.I</h2>
+            <span>Alfa Termomecânica</span>
+            <span>Fevereiro de 2024 a Setembro de 2024</span>
+            <p>• Configurações e parametrizações do sistema ERP da empresa.</p>
+            <p>• Integrações via API REST no Power Query.</p>
+            <p>• API REST em Python para criação de sistema de automação.</p>
+            <p>
+              • Apoio no suporte de colaboradores da empresa em relação a erros
+              dos sitemas que são utilizados.
+            </p>
+          </div>
+          <div class="exp">
+            <i class="fa-solid fa-briefcase"></i>
+            <h2>Desenvolvedor FrontEnd</h2>
+            <span>Startup Pergunt.ai</span>
+            <span>Maio de 2024 a Setembro de 2024</span>
+            <p>• Desenvolver páginas e funcionalidades do site.</p>
+            <p>• Criação de componentes com React.JS.</p>
+            <p>• Resolver problemas relacionados a interface.</p>
+            <p>
+              • Utilização de React para a interface, rotas e funções
+              relacionadas ao projeto.
+            </p>
+          </div>
+          <div class="exp">
+            <i class="fa-solid fa-briefcase"></i>
+            <h2>Instrutor de Programação</h2>
+            <span>Ctrl+Play</span>
+            <span>Agosto de 2024 até o presente</span>
+            <p>
+              • Dar aula sobre programação e robótica focando no desenvolvimento
+              e aprendizado das crianças e adolescentes.
+            </p>
+            <p>• Programação com Python, HTML, CSS, JavaScript e React.</p>
+            <p>• Robótica com arduino e microbit.</p>
+          </div>
+          <div class="exp">
+            <i class="fa-solid fa-briefcase"></i>
+            <h2>Agente de integração</h2>
+            <span>Alfa Termomecânica</span>
+            <span>Outubro de 2024 até o presente</span>
+            <p>
+              • Realizar integrações no Power Query para criação de consultas.
+            </p>
+            <p>
+              • Desenvolver sistemas de automação com python integrado com o
+              sistema de gestão da empresa.
+            </p>
+            <p>
+              • Auxiliar os demais colaboradores com problemas nas plataformas
+              utilizadas pela empresa.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="projects">
+        <div class="title-project">
+          <h2>Projetos</h2>
+        </div>
+        <div id="projects-container">
+          <div class="project-info">
+            <h1>Convert</h1>
+            <img src="assets/convert-project.png" alt="" />
+            <p>Conversor de libra, dólar e euro para reais.</p>
+            <div class="techs-container">
+              <i class="fa-brands fa-html5"></i>
+              <i class="fa-brands fa-css3-alt"></i>
+              <i class="fa-brands fa-js"></i>
+            </div>
+
+            <a
+              href="https://projeto-convert-nine.vercel.app"
+              target="_blank"
+              class="btn-project"
+              >Ver projeto</a
+            >
+          </div>
+
+          <div class="project-info">
+            <h1>Refund</h1>
+            <img src="assets/project-refund.png" alt="" />
+            <p>Site de gestão de gastos para o cotidiano.</p>
+            <div class="techs-container">
+              <i class="fa-brands fa-html5"></i>
+              <i class="fa-brands fa-css3-alt"></i>
+              <i class="fa-brands fa-js"></i>
+            </div>
+            <a
+              href="https://projeto-refund.vercel.app"
+              target="_blank"
+              class="btn-project"
+              >Ver projeto</a
+            >
+          </div>
+
+          <div class="project-info">
+            <h1>HairDay</h1>
+            <img src="assets/project-hairday.png" alt="" />
+            <p>Sistema de agendamento de barbearia</p>
+            <div class="techs-container">
+              <i class="fa-brands fa-html5"></i>
+              <i class="fa-brands fa-css3-alt"></i>
+              <i class="fa-brands fa-js"></i>
+              <i class="fa-brands fa-node-js"></i>
+            </div>
+            <a
+              href="https://projeto-hairday.vercel.app"
+              target="_blank"
+              class="btn-project"
+              >Ver projeto</a
+            >
+          </div>
+        </div>
+
+        <span>Mais projetos a caminho...</span>
+      </section>
+
+      <section id="repo">
+        <h2>Repositórios</h2>
+        <div class="repo-container">
+          <a
+            href="https://github.com/jvfsccp/Cine-Young"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="repo-item"
+          >
+            <i class="fa-solid fa-code-fork"></i>
+            <b>Cine-Young</b>
+            <p>
+              Clone do famoso letterboxd, utilizando html, tailwindcss e
+              javascript, projeto final de uma turma.
+            </p>
+          </a>
+
+          <a
+            href="https://github.com/jvfsccp/imersao-backend"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="repo-item"
+          >
+            <i class="fa-solid fa-code-fork"></i>
+            <b>Imersão-Backend</b>
+            <p>
+              Projeto feito com a Alura em um evento com parceria com o google
+              gemini. Utilizando node.js para criação de um api.
+            </p>
+          </a>
+
+          <a
+            href="https://github.com/jvfsccp/send-email-automation"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="repo-item"
+          >
+            <i class="fa-solid fa-code-fork"></i>
+            <b>Send-email</b>
+            <p>
+              Automação para envio de emails feito com Python e suas blbiotecas
+              como: Pandas, Requests e smmtlib.
+            </p>
+          </a>
+
+          <a
+            href="https://github.com/jvfsccp/full-stack-rockeseat"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="repo-item"
+          >
+            <i class="fa-solid fa-code-fork"></i>
+            <b>FullStack RS</b>
+            <p>
+              Repositório feito para salvar as aulas e projetos do curso
+              fullstack da rocketseat.
+            </p>
+          </a>
+          <a
+            href="https://github.com/jvfsccp/windows-cy2"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="repo-item"
+          >
+            <i class="fa-solid fa-code-fork"></i>
+            <b>Windows-CY2</b>
+            <p>
+              Clone do famoso Windows utilizando HTML, CSS, Bootstrap e
+              Javascript.
+            </p>
+          </a>
+          <a
+            href="https://github.com/jvfsccp/projeto-final-cy2"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="repo-item"
+          >
+            <i class="fa-solid fa-code-fork"></i>
+            <b>GameYoung</b>
+            <p>
+              Repositório com os detalhes e informações sobre jogos, projeto
+              final de uma turma.
+            </p>
+          </a>
+        </div>
+      </section>
+
+      <section id="contact">
+        <div id="contact-header">
+          <i class="fa-regular fa-address-card"></i>
+          <h2>Contato</h2>
+        </div>
+
+        <div id="contact-container">
+          <div class="contact-info">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://instagram.com/_jaoovf" target="_blank"
+              >Instagram</a
+            >
+          </div>
+
+          <div class="contact-info">
+            <i class="fa-brands fa-linkedin-in"></i>
+            <a
+              href="https://www.linkedin.com/in/joao-victor-fernandes-castro/"
+              target="_blank"
+              >LinkedIn</a
+            >
+          </div>
+
+          <div class="contact-info">
+            <i class="fa-brands fa-whatsapp"></i>
+            <a href="https://wa.me/5562981814320" target="_blank">Whatsapp</a>
+          </div>
+
+          <div class="contact-info">
+            <i class="fa-regular fa-envelope"></i>
+            <a href="mailto:joaovictorfernandescastro@gmail.com" target="_blank"
+              >Email</a
+            >
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 - <a href="https://github.com/jvfsccp">João Victor</a></p>
+    </footer>
+
+    <script src="scripts.js"></script>
+  </body>
 </html>
